feat: fetch events
